--- a/.github/workflows/create_cluster.yml
+++ b/.github/workflows/create_cluster.yml
@@ -6,6 +6,10 @@ name: CI
 on:
   workflow_dispatch:
     inputs:
+      environment:
+        description: 'Environment'     
+        required: false
+        default: 'Sandbox'
       resource_group:
         description: 'Resource Group'     
         required: false
@@ -38,8 +42,10 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+  
   # This workflow contains a single job called "build"
   create:
+    environment: ${{ github.event.inputs.environment }}
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
