--- a/.github/workflows/create_cluster.yml
+++ b/.github/workflows/create_cluster.yml
@@ -60,6 +60,12 @@ jobs:
         with:
           creds: ${{ secrets.AZ_DEPLOY_CRED }}
 
+      # Create Resource Group If Not exists
+      - name: Create Resouce Group
+        run: |
+          if [ $(az group exists --name "${{ github.event.inputs.resource_group }}") = false ]; then
+            az group create --name "${{ github.event.inputs.resource_group }}" --location $LOCATION
+          fi
       # Create Cluster
       - name: Run a multi-line script
         run: az aks create -n ${{ github.event.inputs.cluster_name }} -s "${{ github.event.inputs.subscription }}" -g "${{ github.event.inputs.resource_group }}" --node-count ${{ github.event.inputs.node_count }} -s ${{ github.event.inputs.vm_size }} --load-balancer-sku ${{ github.event.inputs.load_balancer_sku }} --generate-ssh-keys --enable-aad --enable-azure-rbac  --yes
